--- a/Runtime/MornEditor.asmdef
+++ b/Runtime/MornEditor.asmdef
@@ -1,12 +1,8 @@
 {
     "name": "MornEditor",
     "rootNamespace": "MornEditor",
-    "references": [
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
-    ],
-    "includePlatforms": [
-        "Editor"
-    ],
+    "references": [],
+    "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
