--- a/Editor/MornEditor.Editor.asmdef
+++ b/Editor/MornEditor.Editor.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "MornEditor",
     "references": [
         "GUID:520891f70526d454fa74c098f96aaedd",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:9fb3b15b1474476cbe64c6bd63468fb6"
     ],
     "includePlatforms": [
         "Editor"
